# libdbusmenu

./: .bzrignore  ChangeLog  TODO  autogen.sh  configure  configure.ac  report.xsl  setup.py
dbusmenu-gtk/: README  dbusMenuTest  dbusmenu.py  dbusmenu.xml
debian/: changelog  control  copyright  desktop-testing-library.install  libdbusmenu-glib-dev.install  libdbusmenu-gtk-dev.install  libdbusmenu-gtk3-dev.install  rules  ubuntu-desktop-tests.install  ubuntu-tests.install
desktoptesting/: __init__.py  check.py  deskex.py  deskex_constants.py  gnome.py  gnome_constants.py  test_runner.py  test_suite.py  ubuntu.py  ubuntu_constants.py  utils.py
desktoptesting/application/: __init__.py  deskex.py  gnome.py  main.py  ubuntu.py
desktoptesting/application/pidgin/: __init__.py  buddy.py  msn_utils.py  pidgin.py  xmpp_utils.py
desktoptesting/pidgin/: msn_utils.py  pidgin.py
desktoptesting/test_suite/: __init__.py  deskex.py  gnome.py  main.py  pidgin.py  ubuntu.py
docs/libdbusmenu-gtk/reference/: Makefile.am  Makefile.in
docs/libdbusmenu-gtk/reference/html/: ch01.html  index.html  libdbusmenu-gtk-parser.html
docs/reference/: Makefile.am
docs/reference/libdbusmenu-glib/: Makefile.am
docs/reference/libdbusmenu-gtk/: Makefile.am
docs/reference/libdbusmenu-qt/: Makefile.am
gedit/: gedit_ascii.xml  gedit_chains.py  gedit_chains.xml  gedit_utf8.xml  report.xsl
gedit/app_data/: ascii_data.xml  utf8_data.xml
gnome-panel/: Accessories.xml  Games.xml  Graphics.xml  SoundVideo.xml  openAll.xml  open_app.py
gnome-panel/data/: blackjack.xml  brasero.xml  calculator.xml  charactermap.xml  chess.xml  dictionary.xml  ekiga.xml  firefox.xml  gimp.xml  klotski.xml  mahjongg.xml  manageprintjobs.xml  nibbles.xml  remotedesktop.xml  rhythmbox.xml  solitaire.xml  takescreenshot.xml  tetravex.xml  texteditor.xml  tomboynotes.xml  totem.xml  transmission.xml
indicator-applet/: indicator_applet.py  indicator_applet.xml
indicator-applet/data/: indicator_test.desktop
libdbusmenu-glib/: Makefile.am  client.c  dbusmenu-glib.h  gmenu-translator.c  gmenu-translator.h  menuitem-proxy.c  menuitem.c  menuitem.h  server.c
libdbusmenu-gtk/: Makefile.am  Makefile.in  client.c  genericmenuitem.c  menu.c  parser.c
mago/: __init__.py  utils.py
mago/application/: deskex.py  gnome.py
mago/application/pidgin/: msn_utils.py  xmpp_utils.py
mago/test_suite/: __init__.py  deskex.py  gnome.py  main.py  pidgin.py  ubuntu.py
notify-osd/: README  notify_osd.py  notify_osd.xml  notify_osd_display.py  notify_osd_queue.py  notify_osd_synchronous.py
notify-osd/data/: bubble_queue.xml  icons_summary_body_data.xml  icons_summary_data.xml  summary_body_data.xml  summary_data.xml  synchronous_data.xml
openAll/: Accessories.xml  Games.xml  Graphics.xml  Internet.xml  Office.xml  SoundVideo.xml  report.xsl
openAll/app_data/: audiocdextractor.xml  calc.xml  evolution1.xml  evolution2.xml  fiveormore.xml  freecell.xml  fspot.xml  gimp.xml  lagno.xml  mines.xml  oodraw.xml  passwordsandencryptionkeys.xml  presentation.xml  samegnome.xml  solitaire.xml  sudoku.xml  takescreenshot.xml  tali.xml  terminal.xml  writer.xml  xsane.xml
pidgin/: pidgin_app.py  pidgin_messaging.py  pidgin_messaging.xml  pidgin_msn.py  pidgin_msn.xml  pidgin_new_account.py  pidgin_new_account.xml  pidgin_notify.py  pidgin_notify.xml  pidgin_use.py  pidgin_use.xml  xmpp_utils.py
pidgin/data/: credentials.ini.example
pidgin/data/purple/: accounts.xml  prefs.xml
seahorse/: generate_pgp.py  generate_pgp.xml  generate_ssh.py  generate_ssh.xml
seahorse/data/: generate_ssh.xml  generate_ssh_set_up.xml
tests/: Makefile.am  Makefile.in  test-gtk-objects.c  test-gtk-shortcut-server.c
tools/: Makefile.am  dbusmenu-dumper.c  dbusmenu-gmenu-bridge.c
ubuntu-menu/: Accessories.xml  AisleRiotSolitaire.xml  Blackjack.xml  Brasero.xml  Calculator.xml  CharacterMap.xml  ChessTest.xml  Dictionary.xml  DiskUsage.xml  Ekiga.xml  Evolution.xml  Firefox.xml  Fiveormore.xml  Four-in-a-row.xml  Games.xml  GnomeTerminal.xml  Gnometris.xml  Internet.xml  Klotski.xml  Mahjongg.xml  Mines.xml  MoviePlayer.xml  Nibbles.xml  Pidgin.xml  RemoteDesktop.xml  Rhythmbox.xml  SamegNOME.xml  Seahorse.xml  SoundVideo.xml  Sudoku.xml  TakeScreenshot.xml  Tali.xml  TerminalServerClient.xml  Tetravex.xml  TextEditor.xml  Tomboy.xml  Transmission.xml  open_app.py  ubuntu_menu.py
ubuntu-menu/data/: brasero.xml  charactermap.xml  diskusageanalyzer.xml  ekiga.xml  fourinarow.xml  pidgin.xml  sudoku.xml  takescreenshot.xml  terminal.xml  tetris.xml  totem.xml  trackersearchtool.xml
ubuntutesting/: gnome.py  gnome_constants.py  ubuntu.py  ubuntu_constants.py
update-manager/: run_test.sh  unselect_all.py  unselect_all.xml  update_first.py  update_first.xml  update_manager.py  update_manager.xml  update_none.py  update_none.xml  update_system.py  update_system.xml
update-manager/data/: update_manager_data.xml
updateSystem/: report.xsl  update_first.py  update_system.xml
